--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
     </div>
     <div class="bottom">
         <p align="center">
-            <a href="http://wa.me/62887435047326" rel="noopener noreferrer" class="text"><i class="mdi mdi-whatsapp"></i>Whatsapp</a>
+            <a href="http://wa.me/916380260672" rel="noopener noreferrer" class="text"><i class="mdi mdi-whatsapp"></i>Whatsapp</a>
         </p>
     </div>
 </body>
@@ -48,7 +48,7 @@
 }
 
 html {
-    background: url(https://example.com/your-new-background-image.jpg) no-repeat center center fixed;
+    background: url(https://i.imgur.com/wO3Aity.jpeg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
