--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,28 +7,28 @@
 <meta name="description" content="Situs web REST API yang menyediakan berbagai macam Api untuk mengembangkan aplikasimu.">
 <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
 <meta name="author" content="ZeeoneOfc">
-<title> Alphabot - REST APIs</title>
-<meta property="og:site_name" name="og:site_name" content="Alphabot APIs">
-<meta property="og:title" name="og:title" content="Alphabot - REST APIs">
-<meta property="og:url" name="og:url" content="https://api.zeeoneofc.my.id/">
-<meta property="og:image" name="og:image" content="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<meta property="og:description" name="og:description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
-<link rel="apple-touch-icon" sizes="57x57" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="60x60" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="72x72" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="76x76" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="114x114" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="120x120" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="144x144" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="152x152" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
+<title> TurboApis - REST APIs</title>
+<meta property="og:site_name" name="og:site_name" content="TurboApis">
+<meta property="og:title" name="og:title" content="TurboApis - REST APIs">
+<meta property="og:url" name="og:url" content="https://wa.me/916380260672">
+<meta property="og:image" name="og:image" content="https://i.imgur.com/KB1gs9M.jpeg">
+<meta property="og:description" name="og:description" content="Any Rest Api Website Made By TurboMods">
+<link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
 <link rel="shortcut icon" type="image/x-icon" href="../img/icons/favicon.ico">
-<link rel="icon" type="image/png" sizes="192x192" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="icon" type="image/png" sizes="96x96" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="https://www.linkpicture.com/q/png_20230123_102817_0000.png">
+<meta name="msapplication-TileImage" content="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
 <meta name="theme-color" content="#ffffff">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -43,7 +43,7 @@
 <div class="sidebar-wrapper">
 <div class="logo">
 <a href="javascript:void(0)" class="simple-text logo-normal">
-Alphabot Api
+Turbo Api
           </a>
         </div>
         <ul class="nav">
@@ -116,9 +116,9 @@ Alphabot Api
 </div>
 <ul class="nav">
 <li>
-<a href="https://youtube.com/@zeeoneofc">
+<a href="https://youtube.com/@TurboMods">
 <i class="tim-icons icon-send"></i>
-<p>ZeeoneOfc</p>
+<p>TurboMods</p>
 </a>
 </li>
 </ul>
@@ -153,7 +153,7 @@ Alphabot Api
 <li class="dropdown nav-item">
 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
 <div class="photo">
-<img src="https://www.linkpicture.com/q/png_20230123_102817_0000.png" alt="Profile Photo">
+<img src="https://telegra.ph/file/585c329da45f7d2a6e9dc.png" alt="Profile Photo">
 </div>
 <b class="caret d-none d-lg-block d-xl-block"></b>
 <p class="d-lg-none">
@@ -298,7 +298,7 @@ Profile
 <h2 class="warn" style="color: red"></h2>
 <label for="URL">Enter Your ApiKey:</label>
 <input type="text" class="form-control" placeholder="Your apikey" name="apikey" required="">
-<small id="textHelp" class="font">Gapunya Apikey? Kan udah
+<small id="textHelp" class="font">Don't have Apikey? That's it
 <a href="/users/login">
 Login
 </a>
@@ -320,18 +320,18 @@ Login
 <p></p>
 <script data-cfasync="false" src="../js/email-decode.min.js"></script><script>
 arrBulan = [
-"Januari",
-"Februari",
-"Maret",
+"January",
+"February",
+"March",
 "April",
-"Mei",
-"Juni",
-"Juli",
-"Agustus",
+"May",
+"June",
+"July",
+"August",
 "September",
-"Oktober",
+"October",
 "November",
-"Desember",
+"December",
 ];
 var txt = "";
 txt +=
@@ -401,14 +401,7 @@ document.write(txt);
 </thead>
 <tbody>
 <tr>
-<p> Allah SWT</p>
-<p> My Perents</p>
-<p> Loli Killers</p>
-<p> Rynz</p>
-<p> Eka Danuarta</p>
-<p> ZeeoneOfc </p>
-<p> Creative Time [ For Template ]</p>
-<p> ALL HUMAN</p>
+<p> TeamToxic</p>
 </tr>
 </tbody>
 </table>
@@ -423,7 +416,7 @@ document.write(txt);
 <ul class="nav">
 <li class="nav-item">
 <a href="javascript:void(0)" class="nav-link">
-ZEEONE OFC
+TURBOMODS
 </a>
 </li>
 </ul>
@@ -432,7 +425,7 @@ ZEEONE OFC
 <script>
 document.write(new Date().getFullYear())
 </script> made with <i class="tim-icons icon-heart-2"></i> by
-<a href="https://github.com/zeeone-ofc" target="_blank">Zeeoneofc</a>.
+<a href="https://github.com/TURBOHYPER" target="_blank">TurboMods</a>.
 </div>
 </div>
 </footer>
@@ -463,16 +456,16 @@ document.write(new Date().getFullYear())
 </li>
 <li class="button-container">
 <a class="text-center">Contact Me</a>
-<a href="https://wa.me/62887435047326" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
-<a href="https://t.me/zeeoneofc" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
-<a href="https://instagram.com/zeeoneofc" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
+<a href="https://wa.me/916380260672" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
+<a href="https://youtube.com/@TurboMods" target="_blink" class="btn btn-info btn-block btn-round">Youtube</a>
+<a href="https://instagram.com/toxic_turbo777" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
 </li>
 </ul>
 </div>
 </div>
 <script>
 f=
-_=>navigator.getBattery().then(b=>alert('Subcribe YT ZEEONE OFC jika ingin memakai rest api ini'))
+_=>navigator.getBattery().then(b=>alert('Subscribe to TurboMods if you want to use this amazing rest'))
 f()
 </script>
 <!-- Core JS Files -->
