--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Situs web REST API yang menyediakan berbagai macam Api untuk mengembangkan aplikasimu.">
 <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-<meta name="author" content="ZeeoneOfc">
+<meta name="author" content="TurboMods">
 <title> TurboApis - REST APIs</title>
 <meta property="og:site_name" name="og:site_name" content="TurboApis">
 <meta property="og:title" name="og:title" content="TurboApis - REST APIs">
@@ -198,7 +198,7 @@ Profile
 <small class="fs-12 text-warning">
 <div id="browser_sholat"></div>
 </small>
-<small class="fs-12 text-success">Macam tak betul lah budak nih!!!</small>
+<small class="fs-12 text-success">It's not right, boy!!!</small>
 </div>
 <span class="text-info fs-35 dash1-iocns bg-success-transparent border-success"><i class="tim-icons icon-time-alarm" aria-hidden="true"></i></span>
 </div>
