--- a/views/downloader.ejs
+++ b/views/downloader.ejs
@@ -1,76 +1,64 @@
 <!DOCTYPE html>
-<html lang="en"  class="height-full">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
-    <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-    <meta name="author" content="zeeoneofc">
-    <title>Alphabot - REST APIs</title>
-    <meta property="og:site_name" name="og:site_name" content="Alphabot APIs">
-    <meta property="og:title" name="og:title" content="Alphabot - REST APIs">
-    <meta property="og:url" name="og:url" content="https://api-alphabot.herokuapp.com/">
-    <meta property="og:image" name="og:image" content="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
-    <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="https://telegra.ph/file/5084b8b304e57794ed83c.jpg">
-    <meta name="theme-color" content="#ffffff">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link href="../css/nucleo-icons.css" rel="stylesheet" />
-  <link href="../css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
-  <link href="../demo/demo.css" rel="stylesheet" />
+<html lang="en" class="height-full">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Situs web REST API yang menyediakan berbagai macam Api untuk mengembangkan aplikasimu.">
+<meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
+<meta name="author" content="TurboMods">
+<title> TurboApis - REST APIs</title>
+<meta property="og:site_name" name="og:site_name" content="TurboApis">
+<meta property="og:title" name="og:title" content="TurboApis - REST APIs">
+<meta property="og:url" name="og:url" content="https://wa.me/916380260672">
+<meta property="og:image" name="og:image" content="https://i.imgur.com/KB1gs9M.jpeg">
+<meta property="og:description" name="og:description" content="Any Rest Api Website Made By TurboMods">
+<link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="shortcut icon" type="image/x-icon" href="../img/icons/favicon.ico">
+<link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="https://telegra.ph/file/585c329da45f7d2a6e9dc.png">
+<meta name="theme-color" content="#ffffff">
+<link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
+<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<link href="../css/nucleo-icons.css" rel="stylesheet" />
+<link href="../css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
+<link href="../demo/demo.css" rel="stylesheet" />
 </head>
 
-<body class="">
-  <div class="wrapper">
-    <div class="sidebar">
-      <div class="sidebar-wrapper">
-        <div class="logo">
-          <a href="javascript:void(0)" class="simple-text logo-normal">
-            Alphabot Api
+<body id="page-top" onload="getvisitor();">
+<div class="wrapper">
+<div class="sidebar">
+<div class="sidebar-wrapper">
+<div class="logo">
+<a href="javascript:void(0)" class="simple-text logo-normal">
+Turbo Api
           </a>
         </div>
         <ul class="nav">
-          <li>
+          <li class="active">
             <a href="/docs">
               <i class="tim-icons icon-chart-pie-36"></i>
               <p>Dashboard</p>
             </a>
           </li>
           <li>
-            <a href="/cecan">
-          <i class="tim-icons icon-send"></i>
-           <p>Cecan Api</p>
-            </a>
-          </li>
-          <li class="active">
           	<a href="/downloader">
           <i class="tim-icons icon-cloud-download-93"></i>
           <p>Download Api</p>
           </a>
           </li>
-          <li>
-				<a href="/news">
-			<i class="tim-icons icon-paper"></i>
-			<p>News Api</p>
-			</a>
-		  </li>
           <li>
           <a href="/photooxy">
           <i class="tim-icons icon-image-02"></i>
@@ -89,42 +77,23 @@
           <p>Nsfw Api</p>
           </a>
           </li>
-	    <li>
-          <a href="/islam">
-          <i class="tim-icons icon-istanbul"></i>
-          <p>Islamic Api</p>
-          </a>
-          </li>
-          </li>
-          <li>
-          	<a href="/game">
-          <i class="tim-icons icon-puzzle-10"></i>
-          <p>Games Api</p>
-          </a>
-          </li>
-	    <li>
-          <a href="/other">
-          <i class="tim-icons icon-globe-2"></i>
-          <p>Others Api</p>
-          </a>
-          </li>
-          </ul>
-        <a href="javascript:void(0)"></a>
-          <div class="logo">
-            <a href="javascript:void(0)" class="simple-text logo-mini">
-            </a>
-          </div>
-        <ul class="nav">
-          <li>
-            <a href="https://github.com/zeeoneofficial">
-            <i class="tim-icons icon-send"></i>
-            <p>zeeoneofc</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="main-panel">
+</ul>
+<a href="javascript:void(0)"></a>
+<div class="logo">
+<a href="javascript:void(0)" class="simple-text logo-mini">
+</a>
+</div>
+<ul class="nav">
+<li>
+<a href="https://youtube.com/@TurboMods">
+<i class="tim-icons icon-send"></i>
+<p>TurboMods</p>
+</a>
+</li>
+</ul>
+</div>
+</div>
+<div class="main-panel">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-absolute navbar-transparent">
         <div class="container-fluid">
@@ -153,7 +122,7 @@
               <li class="dropdown nav-item">
                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                   <div class="photo">
-                    <img src="https://telegra.ph/file/77bab9724c416edc8bf61.jpg" alt="Profile Photo">
+                    <img src="https://i.imgur.com/KB1gs9M.jpeg" alt="Profile Photo">
                   </div>
                   <b class="caret d-none d-lg-block d-xl-block"></b>
                   <p class="d-lg-none">
@@ -339,57 +308,57 @@
             </div>
             </div>
       <footer class="footer">
-        <div class="container-fluid">
-          <ul class="nav">
-            <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link">
-                ZEEONE OFC
-              </a>
-            </li>
-          </ul>
-          <div class="copyright">
-            ©
-            <script>
-              document.write(new Date().getFullYear())
-            </script> made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://github.com/zeeoneofficial" target="_blank">ZeeoneOfc</a> for a better web.
-          </div>
-        </div>
-      </footer>
-    </div>
-  </div>
-  <div class="fixed-plugin">
-    <div class="dropdown show-dropdown">
-      <a href="#" data-toggle="dropdown">
-        <i class="fa fa-cog fa-2x"> </i>
-      </a>
-      <ul class="dropdown-menu">
-        <li class="header-title"> Sidebar Background</li>
-        <li class="adjustments-line">
-          <a href="javascript:void(0)" class="switch-trigger background-color">
-            <div class="badge-colors text-center">
-              <span class="badge filter badge-primary active" data-color="primary"></span>
-              <span class="badge filter badge-info" data-color="blue"></span>
-              <span class="badge filter badge-success" data-color="green"></span>
-            </div>
-            <div class="clearfix"></div>
-          </a>
-        </li>
-        <li class="adjustments-line text-center color-change">
-          <span class="color-label">LIGHT MODE</span>
-          <span class="badge light-badge mr-2"></span>
-          <span class="badge dark-badge ml-2"></span>
-          <span class="color-label">DARK MODE</span>
-        </li>
-        <li class="button-container">
-          <a class="text-center">Contact Me</a>
-          <a href="https://wa.me/62887435047326?text=Hallo%20bang" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
-          <a href="https://t.me/zeeoneofc" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
-          <a href="https://instagram.com/zeeoneofc" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<div class="container-fluid">
+<ul class="nav">
+<li class="nav-item">
+<a href="javascript:void(0)" class="nav-link">
+TURBOMODS
+</a>
+</li>
+</ul>
+<div class="copyright">
+©
+<script>
+document.write(new Date().getFullYear())
+</script> made with <i class="tim-icons icon-heart-2"></i> by
+<a href="https://github.com/TURBOHYPER" target="_blank">TurboMods</a>.
+</div>
+</div>
+</footer>
+</div>
+</div>
+<div class="fixed-plugin">
+<div class="dropdown show-dropdown">
+<a href="#" data-toggle="dropdown">
+<i class="fa fa-cog fa-2x"> </i>
+</a>
+<ul class="dropdown-menu">
+<li class="header-title"> Sidebar Background</li>
+<li class="adjustments-line">
+<a href="javascript:void(0)" class="switch-trigger background-color">
+<div class="badge-colors text-center">
+<span class="badge filter badge-info" data-color="blue"></span>
+<span class="badge filter badge-primary active" data-color="primary"></span>
+<span class="badge filter badge-success" data-color="green"></span>
+</div>
+<div class="clearfix"></div>
+</a>
+</li>
+<li class="adjustments-line text-center color-change">
+<span class="color-label">LIGHT MODE</span>
+<span class="badge light-badge mr-2"></span>
+<span class="badge dark-badge ml-2"></span>
+<span class="color-label">DARK MODE</span>
+</li>
+<li class="button-container">
+<a class="text-center">Contact Me</a>
+<a href="https://wa.me/916380260672" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
+<a href="https://youtube.com/@TurboMods" target="_blink" class="btn btn-info btn-block btn-round">Youtube</a>
+<a href="https://instagram.com/toxic_turbo777" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
+</li>
+</ul>
+</div>
+</div>
   <!--   Core JS Files   -->
   <script src="../js/core/jquery.min.js"></script>
   <script src="../js/core/popper.min.js"></script>
