--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,17 +8,17 @@
     <meta name="description" content="Nothing spesial here">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>Api Alphabot | Home</title>
-    <meta property="og:site_name" name="og:site_name" content="Zeeoneofc Api">
-    <meta property="og:title" name="og:title" content="Zeeoneofc Api">
-    <meta property="og:url" name="og:url" content="https://hadehhhh.herokuapp.com/">
+    <title>TurboApis | Home</title>
+    <meta property="og:site_name" name="og:site_name" content="Turbo Api">
+    <meta property="og:title" name="og:title" content="Turbo Api">
+    <meta property="og:url" name="og:url" content="https://wa.me/916380260672">
     <meta property="og:description" name="og:description" content="Nothing spesial here">
     	<script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script>
      <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <link rel="shortcut icon" href="https://f.top4top.io/p_2097ib6hw1.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png" type="image/x-icon" />
     <meta name="theme-color" content="#ffffff">
-    <link rel="canonical" href="https://hadehhhh.herokuapp.com/">
+    <link rel="canonical" href="https://wa.me/916380260672">
 </head>
 
 <body>
