--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,53 +5,57 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Nothing spesial here">
-    <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-    <meta name="author" content="">
+    <meta name="description" content="TurboApis - Your ultimate API solution.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="TurboApis">
+    <meta name="keywords" content="API, TurboApis, Developer Tools, Software">
     <title>TurboApis | Home</title>
-    <meta property="og:site_name" name="og:site_name" content="Turbo Api">
-    <meta property="og:title" name="og:title" content="Turbo Api">
-    <meta property="og:url" name="og:url" content="https://wa.me/916380260672">
-    <meta property="og:description" name="og:description" content="Nothing spesial here">
-    	<script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"> </script>
-     <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <link rel="shortcut icon" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png" type="image/x-icon" />
+
+    <meta property="og:site_name" content="TurboApis">
+    <meta property="og:title" content="TurboApis">
+    <meta property="og:url" content="https://turboapis.com">
+    <meta property="og:description" content="TurboApis - Your ultimate API solution.">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
+    <link rel="shortcut icon" href="https://telegra.ph/file/585c329da45f7d2a6e9dc.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+
     <meta name="theme-color" content="#ffffff">
-    <link rel="canonical" href="https://wa.me/916380260672">
+    <script defer src="scripts.js"></script>
 </head>
 
 <body>
-    <div class="text">
-        <div class="status">
-            <p></br></br></br></br></br></br></br></br></br></br></br></br></br>STATUS : <span class="typed-text"></span><span class="cursor typing"></span></p>
+    <div class="container">
+        <div class="text">
+            <div class="status">
+                <p>STATUS : <span class="typed-text"></span><span class="cursor typing"></span></p>
+            </div>
+            <hr>
+            <div class="readdocs">
+                <p>OPEN <a href="/docs" class="docs">DOCS.</a></p>
+            </div>
         </div>
-        <hr>
-        <div class="readdocs">
-            <p>OPEN <a href="/docs" class="docs">DOCS.</a></p>
+        <div class="bottom">
+            <p>
+                <a href="http://wa.me/916380260672" rel="noopener noreferrer" class="text">
+                    <i class="material-icons">whatsapp</i> Whatsapp
+                </a>
+            </p>
         </div>
-    </div>
-    <div class="bottom">
-        <p align="center">
-            <a href="http://wa.me/916380260672" rel="noopener noreferrer" class="text"><i class="mdi mdi-whatsapp"></i>Whatsapp</a>
-        </p>
     </div>
 </body>
 <style>
-@import url(https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Ubuntu, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 html {
-    background: url(https://i.imgur.com/wO3Aity.jpeg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url('https://i.imgur.com/wO3Aity.jpeg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -62,134 +66,113 @@ body {
     min-height: 100vh;
 }
 
-div.text {
-    position: absolute;
-}
-
-div.text .status {
-    position: relative;
-    animation: animetop .8s;
-}
-
-div.text .readdocs {
-    position: relative;
-    animation: animebot .8s;
+.container {
     text-align: center;
+    color: rgba(0, 191, 255, 0.8);
+}
+
+.status {
+    animation: animetop 0.8s;
+}
+
+.readdocs {
+    animation: animebot 0.8s;
 }
 
 @keyframes animetop {
-    0% {
-        top: -200px;
-        opacity: 0;
-    }
-    100% {
-        top: 0;
-        opacity: 1;
-    }
+    from { top: -200px; opacity: 0; }
+    to { top: 0; opacity: 1; }
 }
 
 @keyframes animebot {
-    0% {
-        top: 200px;
-        opacity: 0;
-    }
-    100% {
-        top: 0;
-        opacity: 1;
-    }
+    from { top: 200px; opacity: 0; }
+    to { top: 0; opacity: 1; }
 }
 
 p {
-    color: rgba(0, 191, 255, .8); /* Light blue text */
-    letter-spacing: .15em;
-    font-size: 15px !important;
+    letter-spacing: 0.15em;
+    font-size: 15px;
     font-weight: 600;
 }
 
 a {
     text-decoration: none;
-    color: rgba(0, 191, 255, .5); /* Light blue links */
-}
-
-a.sosmed {
-    color: rgba(0, 191, 255, .8); /* Light blue social media links */
+    color: rgba(0, 191, 255, 0.5);
 }
 
 a:hover {
-    text-decoration: none;
-    color: rgba(0, 191, 255, 1); /* Brighter blue on hover */
+    color: rgba(0, 191, 255, 1);
 }
 
 .typed-text {
-    color: #00f; /* Blue text */
+    color: #00f;
 }
 
 .cursor {
-    overflow: hidden;
-    border-right: .15em solid #00f; /* Blue cursor */
-    white-space: nowrap;
-    margin: 0 auto;
-    letter-spacing: .15em;
-    animation: typing 1.5s steps(40, end), blink-caret .75s step-end infinite;
+    border-right: 0.15em solid #00f;
+    animation: typing 1.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
 @keyframes typing {
-    from {
-        width: 0;
-    }
-    to {
-        width: 100%;
-    }
+    from { width: 0; }
+    to { width: 100%; }
 }
 
 @keyframes blink-caret {
-    from,
-    to {
-        border-color: transparent;
-    }
-    50% {
-        border-color: #00f; /* Blue caret */
-    }
+    from, to { border-color: transparent; }
+    50% { border-color: #00f; }
 }
 
 hr {
     margin: 10px auto;
-    position: relative;
-    background: rgba(0, 191, 255, .5); /* Light blue line */
+    background: rgba(0, 191, 255, 0.5);
     width: 80%;
     height: 2px;
 }
 
-div.bottom {
+.bottom {
     position: fixed;
     left: 50%;
     bottom: 50px;
     transform: translate(-50%, -50%);
-    margin: 0 auto;
 }
 
 </style>
 <script>
-const typedTextSpan = document.querySelector(".typed-text"),
-    textArray = ["ACTIVE~", "ONLINE~"],
-    typingDelay = 200,
-    erasingDelay = 100,
-    newTextDelay = 2e3;
-let textArrayIndex = 0,
-    charIndex = 0;
+document.addEventListener("DOMContentLoaded", () => {
+    const typedTextSpan = document.querySelector(".typed-text");
+    const textArray = ["ACTIVE~", "ONLINE~"];
+    const typingDelay = 200;
+    const erasingDelay = 100;
+    const newTextDelay = 2000;
+    let textArrayIndex = 0;
+    let charIndex = 0;
 
-function type() { charIndex < textArray[textArrayIndex].length ? (typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex), charIndex++, setTimeout(type, 200)) : setTimeout(erase, 2e3) }
+    function type() {
+        if (charIndex < textArray[textArrayIndex].length) {
+            typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex);
+            charIndex++;
+            setTimeout(type, typingDelay);
+        } else {
+            setTimeout(erase, newTextDelay);
+        }
+    }
 
-function erase() { charIndex > 0 ? (typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex - 1), charIndex--, setTimeout(erase, 100)) : (textArrayIndex++, textArrayIndex >= textArray.length && (textArrayIndex = 0), setTimeout(type, 1300)) }
-document.addEventListener("DOMContentLoaded", (function() { setTimeout(type, 2250) }));
+    function erase() {
+        if (charIndex > 0) {
+            typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex - 1);
+            charIndex--;
+            setTimeout(erase, erasingDelay);
+        } else {
+            textArrayIndex++;
+            if (textArrayIndex >= textArray.length) textArrayIndex = 0;
+            setTimeout(type, typingDelay + 1100);
+        }
+    }
 
-$(document).ready((function() {
-    $(".changeprofile").submit((function(e) {
-        var formObj, formURL = $(this).attr("action"),
-            formData = new FormData(this);
-        $.ajax({ url: formURL, type: "POST", data: formData, contentType: !1, cache: !1, processData: !1, beforeSend: function() { $("button").attr("disabled", "disabled"), $("input").attr("disabled", "disabled"), $("a").attr("disabled", "disabled"), $(".inibutton").html('<i class="fas fa-spinner fa-spin"></i> Wait') }, success: function(data) { data.includes("Success") ? ($("button").removeAttr("disabled", "disabled"), $("a").removeAttr("disabled", "disabled"), $("input").removeAttr("disabled", "disabled"), $(".inibutton").html("Save"), $.notify({ icon: "tim-icons icon-check-2", message: data }, { type: "success", timer: 3e3, placement: { from: "top", align: "right" } }), window.location = window.location) : ($("button").removeAttr("disabled", "disabled"), $("a").removeAttr("disabled", "disabled"), $("input").removeAttr("disabled", "disabled"), $(".inibutton").html("Save"), $.notify({ icon: "tim-icons icon-simple-remove", message: data }, { type: "danger", timer: 3e3, placement: { from: "top", align: "right" } })) } }), e.preventDefault()
-    }))
-}))
+    setTimeout(type, newTextDelay + 250);
+});
+
 </script>
 
 </html>
